# mintdb_stack

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build_mintdb.yaml
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/crypto/: b64.rs  encryption.rs  hash.rs  mod.rs
lib/src/db/: mod.rs  store.rs  vector.rs
lib/src/err/: mod.rs
lib/src/exe/: mod.rs
lib/src/fs/read/: mod.rs
lib/src/fs/write/: mod.rs
lib/src/mac/: mod.rs
lib/src/math/: mod.rs
lib/tests/: mod.rs
lib/tests/crypto/: mod.rs
lib/tests/mac/: mod.rs  uuid.rs
scripts/mintdb.py/: cli.py  geekbot.csv  geekbot.json  requirements.txt
scripts/mintdb.py/app/: app.py
scripts/mintdb.py/lib/: api.py  confluence.py  embeddings.py  mintdb.py
src/: main.rs
src/app/: mod.rs
src/cli/: config.rs  mod.rs  repl.rs  start.rs
src/db/: mod.rs
src/err/: net.rs
src/log/: mod.rs
src/models/: dev.rs
src/net/: mod.rs
src/routes/: dev.rs  health.rs  mod.rs  sql.rs  ws.rs
src/wal/: mod.rs
