[package]
name = "mintdb-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib"]

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
mintdb-stack = { version="0.1.0", path = "lib"}
nalgebra = "0.32.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
