[package]
name = "mintdb-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib"]

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink", "std"] }
mintdb-stack = { version="0.1.0", path = "lib"}
nalgebra = "0.32.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
shlex = "1.3.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
