[package]
name = "mintdb-stack"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
nalgebra = "0.32.3"
ring = "0.17.7"
serde = "1.0.195"
serde_cbor = "0.11.2"
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
